kubernetes/apps/tools/loopdedupe/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loopdedupe-webhook
spec:
  parentRefs:
    - name: loopdedupe
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - loopdedupe.internal.immich.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/webhooks/github
      backendRefs:
        - name: loopdedupe
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loopdedupe-search
spec:
  parentRefs:
    - name: loopdedupe
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - loopdedupe.internal.immich.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/search
      backendRefs:
        - name: loopdedupe
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loopdedupe
spec:
  parentRefs:
    - name: loopdedupe
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - loopdedupe.internal.immich.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loopdedupe
          port: 8000
