kubernetes/apps/tools/loopdedupe/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: loopdedupe
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: loopdedupe
  oidc:
    provider:
      issuer: https://auth.internal.futo.org
    clientIDRef:
      name: loopdedupe-oidc
    clientSecret:
      name: loopdedupe-oidc
    redirectURL: https://loopdedupe.internal.immich.cloud/oauth2/callback
    logoutPath: /oauth2/sign_out
    scopes:
      - openid
      - profile
      - email
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: loopdedupe-search
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: loopdedupe-search
  apiKeyAuth:
    credentialRefs:
      - name: loopdedupe-search-api-key
    extractFrom:
      - headers:
          - x-api-key
